--- a/Weather App/style.css
+++ b/Weather App/style.css
@@ -4,15 +4,58 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
-    background: #222;
     font-family: 'Dosis', sans-serif;
+    background: #222;
+    background-image: url('https://images.unsplash.com/photo-1501418611786-e29f9929fe03?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2670&q=80');
+    font-size: 120%;
 }
 
 .card {
-    background: #eaeaea;
+    background: #000000d0;
+    color: white;
     padding: 2em;
     border-radius: 30px;
     width: 100%;
     max-width: 420px;
     margin: 1em;
+}
+
+.search{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
+button {
+    margin: 0.5em;
+    border-radius: 50%;
+    border: none;
+    height: 35px;
+    width: 35px;
+    outline: none;
+    background: #7c7c7c2b;
+    color: cyan;
+    cursor: pointer;
+    transition: 0.2s ease-in-out;
+}
+
+input.search-bar {
+    border: none;
+    outline: none;
+    padding: .3em 1em;
+    border-radius: 18px;
+    background: #7c7c7c2b;
+    color: white;
+    font-family: inherit;
+    font-size: 100%;
+    width: 75%;
+}
+
+button:hover {
+    background: #7c7c7c6b;
+}
+
+h2.temp {
+    margin: 0;
 }
