--- a/Weather App/style.css
+++ b/Weather App/style.css
@@ -4,7 +4,7 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
-    cursor: url('https://cdn-icons-png.flaticon.com/512/2956/2956686.png'), auto;
+    cursor: url("http://www.rw-designer.com/cursor-view/72149.png"), auto;
     font-family: 'Dosis', sans-serif;
     background: #222;
     background-image: url('https://images.unsplash.com/photo-1501418611786-e29f9929fe03?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2670&q=80');
