--- a/Weather App/style.css
+++ b/Weather App/style.css
@@ -59,3 +59,12 @@ button:hover {
 h2.temp {
     margin: 0;
 }
+
+.flex {
+    display: flex;
+    align-items: center;
+}
+
+.description {
+    text-transform: capitalize;
+}
